# todos

./: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  main.py  pyproject.toml  test.db
defs/: def_response.go  mail.go  todo.go  todo_list.go  user.go
frontend/: index.html  login.html  privacy-policy.html  register.html  stack.html  todos.html
handlers/: about_handlers.go  auth_handlers.go  index_handlers.go  policys_handlers.go  todos_handlers.go
handlers/lists/: lists_handler.go
handlers/users/: users_handler.go
infra/: main.tf  vm.tf
migrations/: todo_lists.sql  todos.sql  users.sql
models/: auth.go  default_resp.go  mail.go  todo.go  todo_list.go  todo_lists.go  todos.go  user.go  users.go
tools/: mail.go
typy/: def_response.go  mail.go  todo.go  todo_list.go  user.go
views/: about.html  base.tpl  index.html  index.tpl  layout.html  login.html  navigation.html  newsletter_policy.html  priavcy-policy.tpl  privacy_policy.html  register.html
